added a simple unit test

--- a/LeftouterJoinSimulation.LeftouterJoinTests/LeftouterJoinSimulation.LeftouterJoinTests.csproj
+++ b/LeftouterJoinSimulation.LeftouterJoinTests/LeftouterJoinSimulation.LeftouterJoinTests.csproj
@@ -23,4 +23,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LeftouterJoinSimulation.LeftouterJoinSample\LeftouterJoinSimulation.LeftouterJoinSample.csproj" />
+  </ItemGroup>
+
 </Project>
